# signhash

./: .gitlab-ci.yml  Cargo.toml  DEVELOPMENT.md  Makefile  README.md  REQUIREMENTS.md  Signpub.txt  TEMP  TEST_IMPLEMENTATION_SUMMARY.md  TEST_SUITE_SUMMARY.md  presentation.html  signhash.code-workspace
.cargo/: config.toml
.github/workflows/: ci.yml  main.yml
benches/: performance.rs
example_files/: check_hash_file  check_hash_verbose_file  check_hash_verbose_file_verbose  check_manifest_file  manifest
example_files/correct/: check_hash_verbose_file  check_manifest_file  manifest
example_files/tampered/: Signpub.txt  check_hash_file  check_hash_file_tampered_manifest  check_hash_file_verbose  check_manifest_good  good_manifest  tampered_manifest
example_files/tampered/test_files/: good_file_2  good_file_3  tampered_file_size
scripts/: bench.sh  dev-build.sh  test.sh
src/: hash_helper.rs  lib.rs  main_helper.rs
tests/: README.md  channel_tests.rs  hash_helper_tests.rs  helper_utils_tests.rs  integration_tests.rs  io_tests.rs  key_management_tests.rs  manifest_creation_tests.rs  manifest_parsing_tests.rs  nonce_tests.rs  signing_tests.rs  test_utils.rs  verification_tests.rs
