[package]
name = "signhash"
version = "1.0.0"
authors = ["Stephen Battista <stephen.battista@gmail.com>"]
edition = "2018"



[features]
default = ["memmap"]


[profile.release]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 16
panic = 'unwind'
incremental = false
overflow-checks = true

[dependencies]
ring = "0.17.14"
data-encoding = "2.9.0"
scoped_threadpool = "0.1.*"
clap = "4.5.53"
serde = "1.0.117"
serde_yaml = "0.9.34-deprecated"
rand = "0.9.2"
num_cpus = "1.17.0"
chrono = "0.4.*"
indicatif = "0.18.3"
walkdir = "2.3.1"
log = "0.4.*"
blake3 = { version = "1.8.2", features = ["rayon"] }
memmap = { version = "0.7.0", optional = true }
anyhow = "1.0.34"