[package]
name = "signhash"
version = "1.0.0"
authors = ["Stephen Battista <stephen.battista@gmail.com>"]
edition = "2018"



[features]
default = ["memmap2"]


[profile.release]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 16
panic = 'unwind'
incremental = false
overflow-checks = true

[dependencies]
ring = "0.17.14"
data-encoding = "2.10.0"
rayon = "1.8"
clap = "4.5.54"
serde = "1.0.117"
serde_yaml = "0.9.34-deprecated"
rand = "0.9.2"
chrono = "0.4.*"
indicatif = "0.18.3"
walkdir = "2.3.1"
log = "0.4.*"
blake3 = { version = "1.8.3", features = ["rayon", "mmap"] }
memmap2 = { version = "0.9", optional = true }
anyhow = "1.0.34"

[dev-dependencies]
tempfile = "3.24.0"