[package]
name = "signhash"
version = "1.0.0"
authors = ["Stephen Battista <stephen.battista@gmail.com>"]
edition = "2018"



[features]
default = ["memmap2"]


[profile.release]
opt-level = 3
debug = false
rpath = false
lto = "thin"                    # Enable thin LTO for better performance
debug-assertions = false
codegen-units = 1               # Better optimization with fewer codegen units
panic = 'unwind'
incremental = true              # Enable incremental compilation for faster rebuilds
overflow-checks = false         # Disable for max performance in release

# Fast development builds
[profile.dev]
opt-level = 1                   # Some optimization for faster dev builds
incremental = true
debug = true

# Profile for development with faster compilation
[profile.dev-opt]
inherits = "dev"
opt-level = 2
debug = 1

[dependencies]
ring = "0.17.14"
data-encoding = "2.10.0"
rayon = "1.8"
clap = "4.5.60"
serde = "1.0.117"
serde_yaml = "0.9.34-deprecated"
rand = "0.10.0"
chrono = "0.4.44"
indicatif = "0.18.4"
walkdir = "2.3.1"
log = "0.4.*"
blake3 = { version = "1.8.3", features = ["rayon", "mmap"] }
memmap2 = { version = "0.9.10", optional = true }
anyhow = "1.0.102"

[dev-dependencies]
tempfile = "3.26.0"
criterion = { version = "0.8.2", features = ["html_reports"] }

[[bench]]
name = "performance"
harness = false